<resources>
    <string name="app_name">MultiAppScrren</string>
    <string name="welcome_to_aditya_cafe">Welcome to Aditya Cafe</string>
    <string name="enter_order_1">Enter order 1</string>
    <string name="order_now">Order Now</string>
    <string name="enter_order_4">Enter order 4</string>
    <string name="enter_order_3">Enter order 3</string>
    <string name="enter_order_2">Enter order 2</string>
    <string name="textview">TextView</string>
</resources>