<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_aditya_cafe"
        android:gravity="center"
         android:textSize="20sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/eT1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:text="@string/enter_order_1"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/eT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_margin="15dp"
        android:text="@string/enter_order_2" />

    <EditText
        android:id="@+id/eT3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_margin="15dp"
        android:text="@string/enter_order_3" />

    <EditText
        android:id="@+id/eT4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_margin="15dp"
        android:text="@string/enter_order_4"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_now"
        android:background="@color/purple_200"/>
</LinearLayout>